# Basic_python_stuff

./: .gitignore  Basic_rpi_stuff.txt  LICENSE.md  README.md  install_nice_stuff.py  process_and_thread_format.py  pyproject.toml  required.txt  set_logger.py  setup.cfg  setup.py  signaleringsplan.md  threaded_logger.py  usefull_urls.md
.spyproject/config/: workspace.ini
Data analysis/: easy_measurement_check.py  quick_fft_filter.py  runge_kutta_ode_solving.py  trapezium_integration.py
Multiprocessing and threading/: process_and_thread_format.py
Multiprocessing tools/: process_manager.py  remote_traceback.py  traceback_propagation_multiprocessing.py
RPI Pico/Usefull pico code snippets/: boot.py  pico_logging.py
Usefull pico code snippets/: Pico_USB.py  pio_pwm.py
multiprocessing_and_threading_examples/: multiple_workers_queue.py  pipe_communication.py
scripts/: install_shh_server.sh
src/custom_tools/analysis/: KMeans_clustering.py  create_timestamp.py
src/custom_tools/mp_tools/: catch_remote_exeptions.py  managers.py  pipe_com.py  process_manager.py  repeat_executor.py
src/custom_tools/multiprocessing_tools/: multiple_workers_queue.py
src/custom_tools/numeric/: fourrier_series.py  quick_fft_filter.py  runge_kutta_ode_solving.py  trapezium_integration.py
src/custom_tools/plotting/: fft_filter_plot.py  set_aestetics.py
statistical_model_examples/: K-NN_regression.py  KMeans_clustering.py  PCA.py  mahalanobis_distance.py  requirements.txt
statistical_models/: k_kross.py  kast_data.xlsx  plot_k_means_digit.py
(+1 files in other folders)
