[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_tools"
version = "0.1.0"
description = "This package contains some usefull python code for rpi."
readme = "README.md"
authors = "Nynra"
maintainers = "Nynra"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas", "numpy", "sympy", "matplotlib", "seaborn",
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
where = ["src"]
